@@ -30,7 +30,6 @@ import java.time.temporal.ChronoField;
 import java.time.temporal.ChronoUnit;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -70,7 +69,7 @@ public class KoboReadingStateService {
                         .statisticsResult(KoboReadingStateResponse.Result.success())
                         .statusInfoResult(KoboReadingStateResponse.Result.success())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
 
         return KoboReadingStateResponse.builder()
                 .requestResult("Success")
@@ -120,7 +119,7 @@ public class KoboReadingStateService {
 
                     return savedState;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
